# straycat-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  flag_docs.md  straycat-rs.yaml
.github/: build.rs  build.yml
.github/workflows/: build.yml
src/: consts.rs  filter.rs  main.rs  parser.rs  resample.rs  util.rs
src/audio/: mod.rs  post_process.rs  read_write.rs  util.rs
src/flags/: parser.rs
src/interpolator/: interp.rs
src/pitchbend/: parser.rs
src/world/: features.rs  mod.rs  synthesis.rs
