[package]
name = "straycat-rs"
version = "1.0.5"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bincode = "1.3.3"
biquad = "0.4.2"
clap = { version = "4.5.8", features = ["derive"] }
hound = "3.5.1"
rand = "0.8.5"
rand_distr = "0.4.3"
regex = "1.10.5"
rsworld = "0.1.0"
rsworld-sys = "0.1.0"
rubato = { version = "0.15.0", default-features = false }
serde = { version = "1.0.203", features = ["derive"] }
symphonia = { version = "0.5.4", features = ["all"] }
